tests/snapshots/cli__uint8_snapshot.snap
---
source: tests/cli.rs
expression: output
---
Peek into assets/uint8.npy
----------------------------------------
Dimensions: 2
Shape: [2, 3]
Type: Uint8
Bytes: 134 B
----------------------------------------
Number of values: 6
Number of unique values: 6
Unique values: [1, 3, 4, 8, 12, 22]
Min value: 1
Max value: 22
